--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <br>
                         <p>Mazaheri, M., M. Heckwolf, B. Vaillancourt, J. Gage, B. Burdo, S. Heckwolf, K. Barry, A. Lipzen, C. Ribeiro, T. Kono, H. Kaeppler, E. Spalding, C. Hirsch, C.R. Buell, N. de Leon, S. Kaeppler. 2018. 
                             <a href="https://bmcplantbiol.biomedcentral.com/articles/10.1186/s12870-019-1653-x" target="_blank"> <span class="logo-dec">Genome-wide association analysis of stalk biomass and anatomical traits in maize.</span>
-                            </a>BMC Plant Biology201919:45
+                            </a>BMC Plant Biology 2019 19:45
                         </p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
