--- a/team.html
+++ b/team.html
@@ -229,12 +229,12 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Team/Rafa.JPG" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Keting_Chen.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
                     <div class="blog-info text-center">
-                        <h2>Rafeal Della Coletta</h2>
+                        <h2>Keting Chen</h2>
                     </div>
             </div>
 
@@ -250,6 +250,17 @@
                     </div>
             </div>
 
+<div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Colton_McNinch" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Colton McNinch</h2>
+                    </div>
+            </div>
 
 
     <!--Undergrads/Highschool-->
@@ -259,7 +270,32 @@
                 <hr class="bottom-line">
             </div>
 
+             <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Amaya_Anderson.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Amaya Anderson</h2>
+                        <br>
+                    </div>
+            </div>
             
+             <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Natalia_Barka.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Natalie Barka</h2>
+                        <br>
+                    </div>
+            </div>
+
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
@@ -286,6 +322,19 @@
                     </div>
             </div>
 
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Karissa_Callis.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Karissa Callis</h2>
+                        <br>
+                    </div>
+            </div>
+
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
@@ -295,6 +344,32 @@
                 </div>
                     <div class="blog-info text-center">
                         <h2>Hazel Chew</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Zala_Cok.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Zala Cok</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Kiana_Davis.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Kiana Davis</h2>
                         <br>
                     </div>
             </div>
@@ -321,6 +396,19 @@
                 </div>
                     <div class="blog-info text-center">
                         <h2>Karen<br>Granados-Nava</h2>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Kata_Hahn.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Kata Hahn</h2>
+                        <br>
                     </div>
             </div>
 
@@ -358,6 +446,19 @@
                 </div>
                     <div class="blog-info text-center">
                         <h2>Lindsey Kemp</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Madison_Knott.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Madison Knott</h2>
                         <br>
                     </div>
             </div>
@@ -449,6 +550,45 @@
                 </div>
                     <div class="blog-info text-center">
                         <h2>Emily Naughton</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Elana_Qunell.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Elana Qunell</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Maggie_Ringler.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Maggie Ringler</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Layan_Safi.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Layan Safi</h2>
                         <br>
                     </div>
             </div>
@@ -552,6 +692,19 @@
                 </div>
                     <div class="blog-info text-center">
                         <h2>Ka Yang</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Brian_Zou.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Brian Zou</h2>
                         <br>
                     </div>
             </div>
