--- a/team.html
+++ b/team.html
@@ -557,6 +557,19 @@
  <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
+                            <img src="img/Team/Girls.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Chloe Peterson</h2>
+                        <br>
+                    </div>
+            </div>
+
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
                             <img src="img/Team/Elana_Qunell.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
@@ -673,7 +686,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Team/Girls.jpg" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Jessica_Wilson.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
