--- a/team.html
+++ b/team.html
@@ -253,7 +253,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Team/Colton_McNinch" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Colton_McNinch.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
