--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
     <!--Post-Docs-->
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="service-title pad-bt15">Postdoc/Staff</h2>
+                <h2 class="service-title pad-bt15">Current and Former Postdoc/Staff</h2>
                 <hr class="bottom-line">
             </div>
 
@@ -211,7 +211,7 @@
     <!--Grad studens-->
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="service-title pad-bt15">Graduate students</h2>
+                <h2 class="service-title pad-bt15">Current and Former Graduate Students</h2>
                 <hr class="bottom-line">
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -266,7 +266,7 @@
     <!--Undergrads/Highschool-->
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="service-title pad-bt15">Undergrad/Highschool</h2>
+                <h2 class="service-title pad-bt15">Current and Former Undergrad/Highschool Students</h2>
                 <hr class="bottom-line">
             </div>
 
