--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
                     <div class="col-md-3">
                     <div class="blog-img2">
-                            <img src="img/maize_paper.jpg" class="img-responsive" style="max-height: 250px">
+                            <img src="img/TE.png" class="img-responsive" style="max-height: 250px">
                     </div>
                     </div>
                     <div class="col-md-9">
