--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <div class="row">
                     <div class="col-md-3">
                     <div class="blog-img2">
-                            <img src="img/G3pub.jpg" class="img-responsive" style="max-height: 250px">
+                            <img src="img/split.png" class="img-responsive" style="max-height: 250px">
                     </div>
                     </div>
                     <div class="col-md-9">
