--- a/team.html
+++ b/team.html
@@ -205,6 +205,18 @@
                     </div>
             </div>
 
+ <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Christine.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Yinjie Qiu</h2>
+                    </div>
+            </div>
+
         </div>
 
 
