--- a/team.html
+++ b/team.html
@@ -208,7 +208,7 @@
  <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Team/Christine.jpg" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/yinjie.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
