--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <br>
                         <br>
                         <p>Ou, S., W. Su, Y. Liao, K. Chougule, D. Ware, T. Peterson, N. Jiang, C. Hirsch, M. Hufford. 2019.<a href="https://www.biorxiv.org/content/10.1101/657890v1" target="_blank"> <span class="logo-dec">Benchmarking Transposable Element Annotation Methods for Creation of a Streamlined, Comprehensive Pipeline.</span>
-                            </a>bioRxiv doi.org/10.1101/657890.
+                            </a>Genome Biology. 20:275.
                         </p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
