--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
                     <div class="col-md-9">
                         <br>
                         <br>
-                        <p>Monnahan, P., J. Michno, C. O'Connor, A. Brohammer, N. Springer, S. McGaugh, C. Hirsch. 2019.<a href="https://www.biorxiv.org/content/10.1101/651984v1" target="_blank"> <span class="logo-dec">Using multiple reference genomes to identify and resolve annotation inconsistencies.</span>
-                            </a>bioRxiv doi.org/10.1101/651987.
+                        <p>Monnahan, P., J. Michno, C. O'Connor, A. Brohammer, N. Springer, S. McGaugh, C. Hirsch. 2020.<a href="https://www.biorxiv.org/content/10.1101/651984v1" target="_blank"> <span class="logo-dec">Using multiple reference genomes to identify and resolve annotation inconsistencies.</span>
+                            </a>BMC Genomics. 21(281):1-13.
                         </p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
