--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                     <div class="col-md-3">
                     <div class="blog-img2">
-                            <img src="img/Li.jpg" class="img-responsive" style="max-height: 250px">
+                            <img src="img/acr.png" class="img-responsive" style="max-height: 250px">
                     </div>
                     </div>
                     <div class="col-md-9">
