--- a/team.html
+++ b/team.html
@@ -250,6 +250,21 @@
                     </div>
             </div>
 
+
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Tes.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Tes Dennison</h2>
+                    </div>
+            </div>
+
+
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
@@ -344,6 +359,19 @@
                     <div class="blog-info text-center">
                         <h2>Karissa Callis</h2>
                         <br>
+                    </div>
+            </div>
+
+
+<div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Grage.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Grace Campidilli</h2>
                     </div>
             </div>
 
