--- a/team.html
+++ b/team.html
@@ -366,7 +366,7 @@
 <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Team/Grage.jpeg" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Grace.jpeg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
